@@ -1,3 +1,4 @@
+* Deprecate Interesect in favor of Intersect
 * Add Values
 
 Version 0.4 - 2014-08-03
